# telegram-icodrops-parser

./: Cargo.toml  README.md  config.example.json
src/: lib.rs  main.rs
src/logic/: mod.rs
src/parser/: ico.rs  mod.rs
src/synchronizer/: config.rs  mod.rs
src/tg_bot/: message.rs  mod.rs
