[package]
name = "telegram_icodrops_parser"
version = "0.1.0"
authors = ["Aleksandr Savelev <savelev.aleksandr.96@yandex.ru>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
scraper = "0.12.0"
mysql_async = "0.25.0"
urlencoding = "1.1.1"